# anime-style-rust

./: .gitignore  Cargo.toml  README.md  download_model.sh
src/: image_utils.rs  main.rs  model.rs  server.rs
static/: index.html
